--- a/articles/30-08-2017.md
+++ b/articles/30-08-2017.md
@@ -3,7 +3,7 @@ Every morning when I wake up I feel the itch to write some particular piece of s
 I go to work thinking that as soon as I finish my job tasks I'll sink my teeth into these delicious tasks I contrived for myself.
 Every evening I come home and play a video-game or watch a TV series and 
 every night just before I fall asleep I remember these projects, but its too late.
-Repeat.
+`GOTO 10`
 
 The problem is trivial, the answer is simple: Just plan a one-hour coding session.
 This could be one hour a day or one hour a week-end, but it has to be regular.
