--- a/articles/30-08-2017.md
+++ b/articles/30-08-2017.md
@@ -8,3 +8,6 @@ every night just before I fall asleep I remember these projects, but its too lat
 The problem is trivial, the answer is simple: Just plan a one-hour coding session.
 This could be one hour a day or one hour a week-end, but it has to be regular.
 If you plan this and respect this schedule you will start moving, slowly but surely
+
+## Note from my future self
+By "plan" it means really plan. Make a calendar event with notifications and stick to it
